--- a/bare_jrnl.tex
+++ b/bare_jrnl.tex
@@ -414,12 +414,12 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-The abstract goes here.
+Este documento planea mostrar las características que hacen que un proyecto en Kickstarter sea exitoso, además de como se genero un clasificador que basado en estas características, puede predecir si dado un proyecto con ciertas características va a tener éxito o no.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-IEEE, IEEEtran, journal, \LaTeX, paper, template.
+Proyecto, Kaggle
 \end{IEEEkeywords}
 
 
