--- a/bare_jrnl.tex
+++ b/bare_jrnl.tex
@@ -57,6 +57,8 @@
 
 
 
+\usepackage[utf8]{inputenc}
+\usepackage[spanish]{babel}
 
 
 % Some very useful LaTeX packages include:
@@ -345,7 +347,6 @@
 % to submit to, of course. )
 
 
-
 \begin{document}
 %
 % paper title
@@ -419,7 +420,7 @@ Este documento planea mostrar las características que hacen que un proyecto en 
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-Proyecto, Kaggle
+Proyecto, Kaggle, Kickstarter, Prediccion, Clasificacion, Machine Learning, Red Neuronal
 \end{IEEEkeywords}
 
 
@@ -439,7 +440,7 @@ Proyecto, Kaggle
 
 
 
-\section{Introduction}
+\section{Introducción}
 % The very first letter is a 2 line initial drop letter followed
 % by the rest of the first word in caps.
 % 
@@ -455,12 +456,15 @@ Proyecto, Kaggle
 % 
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
-\IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
-for IEEE journal papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
+\IEEEPARstart{H}{hay} situaciones en las que una persona tiene una gran idea, pero no sabe donde poder conseguir ayuda para poder construir su idea. Kickstarter es una plataforma para fondos de ideas creativas donde estas personas pueden crear una campaña con su idea y recolectar fondos que dan otras personas dentro de esta plataforma. Kickstarter tiene una gran cantidad de categorias que van desde Musica, Danza hasta juegos y tecnologia. En esta plataforma se puede dar vida mediante el apoyo de otras personas a ideas que podrian haber quedado en el olvido.
+
+Si una persona quiere buscar apoyo para su idea dentro de esta plataforma, sabe que necesita cierta candidad de dinero para hacer realidad su idea, pero no sabe si con esa cantidad que pide va a poder conseguirla dentro de la plataforma, ya que hay bastantes categorias y unas son mas populares que otras. En este documento se planea mostrar una exploracion de las caracteristicas con las que inicia un proyecto, y como estas pueden afectar el exito o fracaso de un proyecto en Kickstarter, ademas basado en estas caracteristicas, el como se implemento un clasificador con los datos de mas de 400.000 proyectos en Kickstarter. 
+
+\section{Exploración de los datos}
+
+\section{Factores de Exito o Fracaso}
+
+\section{Prediciendo el exito de un proyecto}
 
 \subsection{Subsection Heading Here}
 Subsection text here.
