--- a/bare_jrnl.tex
+++ b/bare_jrnl.tex
@@ -461,10 +461,13 @@ Proyecto, Kaggle, Kickstarter, Prediccion, Clasificacion, Machine Learning, Red 
 Si una persona quiere buscar apoyo para su idea dentro de esta plataforma, sabe que necesita cierta candidad de dinero para hacer realidad su idea, pero no sabe si con esa cantidad que pide va a poder conseguirla dentro de la plataforma, ya que hay bastantes categorias y unas son mas populares que otras. En este documento se planea mostrar una exploracion de las caracteristicas con las que inicia un proyecto, y como estas pueden afectar el exito o fracaso de un proyecto en Kickstarter, ademas basado en estas caracteristicas, el como se implemento un clasificador con los datos de mas de 400.000 proyectos en Kickstarter. 
 
 \section{Exploración de los datos}
+Aqui se habla sobre los datos del Dataset
 
 \section{Factores de Exito o Fracaso}
+Aqui se habla de los analisis que definen si un proceso sera exitoso o no
 
 \section{Prediciendo el exito de un proyecto}
+Aqui se pone lo que se uso para el clasificador
 
 \subsection{Subsection Heading Here}
 Subsection text here.
