--- a/bare_jrnl.tex
+++ b/bare_jrnl.tex
@@ -60,7 +60,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{float}
 \graphicspath{ {./Images/} } 
+
 
 % Some very useful LaTeX packages include:
 % (uncomment the ones you want to load)
@@ -468,29 +471,161 @@ Dentro del dataset habían características que fueron tomadas al finalizar la c
 
 Algunos de los comportamientos interesantes se encuentra en Categorias y Categorias Principales, donde la primera tiene 159 elementos mientras la segunda tiene solo 15, el comportamiento de las 40 categorias principales y las categorias principales son similares, pero como tal la categoria principal no representa muy bien la popularidad de las categorias que tiene dentro, por ejemplo, en la categori principal de musica, la subcategoria "Music" tiene una gran cantidad de proyectos a comparacion de las demas subcategorias.
 
-\includegraphics[width=\linewidth]{Images/Categorias.PNG}
 
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+    \includegraphics[width=\linewidth]{Images/Categorias.PNG}
+    \caption{Popularidad de las Categorias Principales}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
 \includegraphics[width=\linewidth]{Images/40Categorias.PNG}
+    \caption{20 Categorias Basicas mas populares}
+\end{figure}
 
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
 \includegraphics[width=\linewidth]{Images/CategoriasMusic.PNG}
+    \caption{Subcategorias de la categoria "Music"}
+\end{figure}
+
+Otro dato interestante se encuentra en la proporcion de campañas canceladas, exitosas, fallidas, entre otros. Aqui la mayor parte de los datos esta conformado por estos 3 primeros mientras que los demas estados representan solo un 3\% de los datos totales. Ademas el 78\% de las campañas usaron como moneda para la campaña el dolar, ademas este porcentaje es muy similar al porcentaje de proyectos de US.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+\includegraphics[width=\linewidth]{Images/states.png}
+    \caption{Estados de las campañas}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+\includegraphics[width=\linewidth]{Images/Currency.png}
+    \caption{Estados de las campañas}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+\includegraphics[width=\linewidth]{Images/Country.png}
+    \caption{Estados de las campañas}
+\end{figure}
+
+Todas estas categorias son las que ayudan a predecir, antes de que una campaña sea lanzada, si tendra exito o no.
 
 \section{Factores de Exito o Fracaso}
 Se realizaron múltiples analisis gráficos de cada una de las características que existen antes de publicar la campaña, donde se compararon entre proyectos exitosos y fallidos. Se pudieron apreciar comportamientos los cuales diferenciaban a las campañas exitosas de las que tienden a fallar.
 
 
+Podemos observar la comparación entre el promedio del dinero recogido en cada uno de los casos de éxito, fracaso o cancelación de un proyecto y este conjunto de datos tiene la mayor proporción.
+Lamentablemente es desconocido por qué algunos proyectos están marcados como "undefined" o "canceled", aunque algunos proyectos "cancelados" también habían alcanzado su objetivo, superando la meta planteada es desconocido el motivo de su cancelación.
+
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+\includegraphics[width=\linewidth]{Images/RatioDinero.png}
+    \caption{Proporción del éxito,fracaso y cancelación de un proyecto. }
+\end{figure}
+
+En el conjunto de datos también existen otros estados como "Live" en el cual el proyecto aún no cumple las fechas para su cierre, pero no son representativos por su baja concentración.
+
+
+Podemos observar la concentración de propuestas  en cada uno de los cuatro trimestres del año, también la proporción de éxito y fracaso, Con una notable concentración de presentación de proyectos creativos  para la financiación en el último trimestre del año, aunque esto no implica el éxito de estas propuestas que en su mayoría no logran alcanzar su objetivo.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+\includegraphics[width=\linewidth]{Images/MeanPerQuarter.png}
+    \caption{Promedio del éxito y fracaso trimestralmente. }
+\end{figure}
+
+
+Podemos observar gráficamente el comportamiento de la frecuencia de los objetivos exitosos, fallidos y cancelados estos dos últimos bajo un mismo  estado, para cada uno de los trimestres del año. Además de obtener el polígono de frecuencias que representa el comportamiento de la distribución de los objetivos para cada estado a través del año.
+
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{justification=centering}
+\includegraphics[width=\linewidth]{Images/GoalDistribution.png}
+    \caption{Distribución del cumplimiento de los proyectos. }
+\end{figure}
+
+
+
 
 \section{Prediciendo el exito de un proyecto}
-Aquí se pone lo que se uso para el clasificador
+La exploracion de datos fue basada en un Kernel para este dataset donde se explicaba el comportamiento de las características y se realizaba un clasificador simple de regresion lineal para la predicción del exito. Los resultados de este Kernel tenían un Accuracy del 64\%. Nosotros usaremos estos resultados para comparar nuestros clasificadores, los cuales fueron implementados usando Random Forest y una red neuronal usando Perceptrones Multicapa.
 
-\subsection{Subsection Heading Here}
-Subsection text here.
+\subsection{Selección de las categorías}
+Como se vio en la sección anterior, podemos agrupar los proyectos cancelados y fallidos en un mismo grupo como los fallidos. En el Kernel en el que nos basamos, solo tomaron las categorías principales, ignorando las 159 sub-categorias, pero como vimos en la primera sección, usando solo las categorías principales no muestra el verdadero comportamiento de la popularidad, debido a que algunas sub-categorias son mucho mas populares que otras.
 
-% needed in second column of first page if using \IEEEpubid
-%\IEEEpubidadjcol
+La característica que representa al país, y la moneda que usa la campaña, pueden hacer parte del grupo de características que nos ayudan en la predicción. Una categoría original es la que representa la duración del proyecto, ya que como vimos previamente hay una clara diferencia entre el promedio de días de un proyecto exitoso y uno fallido. Además se uso el valor que incluye el dataset del objetivo de la campaña, convertido a Dolares, para tener una medida general para todos los proyectos.
 
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
+\subsection{Clasificadores}
+Cada campaña tiene su propia meta de dinero a conseguir, pero dependiendo de la categoría de la campaña, es posible que cierta cantidad de dinero, la cual puede variar debido a esto. Por lo tanto no se pueden comparar como tal las metas entre categorías. Para ello se realizo un escalamiento de los datos comparándolo con el valor de la meta en dolares. Además, debido a que hay demasiadas variables independientes (Cada una de las subcategorias, países y moneda), se hizo uso de una función que convierte las variables categoricas en variables Dummies, donde cada variable independiente se convierte en una característica binaria dentro de nuestro modelo.
 
+Mediante la optimizacion de hyperparametros usando RandomizedSearchSV se buscaron los mejores parametros para el clasificador de Random Forest y el de Perceptrones Multicapa. Los mejores parametros dados por la optimizacion fueron para el clasificador Random Forest:
+
+\begin{itemize}
+	\item \textbf{n estimators:} 20
+	\item \textbf{max depth:} 25
+\end{itemize}
+
+Para el clasificador de Perceptrones Multicapa, los mejores parametros fueron:
+\begin{itemize}
+	\item \textbf{Alpha:} = $10^{-7}$
+	\item \textbf{Hidden layer sizes:} 14
+\end{itemize}
+
+Al final, después de tener un subconjunto datos de entrenamiento y uno de pruebas, los resultados para ambos clasificadores fueron:
+
+\begin{center}
+ \begin{tabular}{||c c c||} 
+ \hline
+ Medida & RF & MLP \\ [0.5ex] 
+ \hline\hline
+ Accuracy & 0.6901 & 0.6913 \\ 
+ \hline
+ Error & 0.3098 & 0.3086 \\[1ex] 
+ \hline
+\end{tabular}
+\end{center}
+
+Donde ambos clasificadores mostraron resultados muy similares.
+
+\subsection{Análisis de los Resultados}
+Una buena utilidad que nos da el clasificador de RandomForest, es que nos puede dar una buena idea de las características que mas influyen al éxito o fracaso de un proyecto. Las características mas importantes halladas fueron:\\
+
+
+\begin{tabular}{ ||p{4cm}||p{3cm}|| }
+ \hline
+ \multicolumn{2}{|c|}{Importancia de las caracteristicas} \\
+ \hline
+ Caracteristicas & Porcentaje (\%) \\
+ \hline
+ usd\_goal\_real    & 0.374131 \\
+ Time\_Delta       &  0.228826\\
+ main\_category\_Music & 0.026051\\
+ category\_Tabletop\_Games & 0.025065\\
+ category\_Shorts &  0.020945\\
+ category\_Theater &  0.020413\\
+ category\_Indie\_Rock  & 0.015706\\
+ country\_N,0" & 0.014696 \\
+ main\_category\_Technology & 0.014117 \\
+ category\_Apps & 0.013403 \\
+
+ \hline
+\end{tabular}\\
+
+Donde se puede apreciar que el tiempo de duración del proyecto y la meta que tienen es lo que decide si una campaña es exitosa o no. Según los datos analizados en las secciones anteriores, se mostró que entre mas alta es la meta, la cantidad de proyectos fallidos aumenta, y que los proyectos exitosos duran menos en promedio que los proyectos fallidos. Las características que afectan el exito de un proyecto, aunque no estan al mismo nivel que las dos anteriores, son las mas populares, donde es normal que sea asi, ya que en estas categorias es donde se consigue la mayor cantidad de apoyos.
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
@@ -610,19 +745,7 @@ The conclusion goes here.
 % starts a section numbered zero.)
 %
 
-
-\appendices
-\section{Proof of the First Zonklar Equation}
-Appendix one text goes here.
-
-% you can choose not to have a title for an appendix
-% if you want by leaving the argument blank
-\section{}
-Appendix two text goes here.
-
-
-% use section* for acknowledgment
-\section*{Acknowledgment}
+\section*{Reconocimientos}
 
 
 The authors would like to thank...
@@ -661,8 +784,7 @@ The authors would like to thank...
 \begin{thebibliography}{1}
 
 \bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
+Kromel. Kickstarter - Successful vs Failed | Kaggle. [online] Available at: https://www.kaggle.com/kromel/kickstarter-successful-vs-failed [Accessed 24 Jul. 2019].
 
 \end{thebibliography}
 
